read-only UI elements added, some background work

--- a/popup.html
+++ b/popup.html
@@ -52,6 +52,12 @@
       <span id="enabled-no" class="i18n_disabled_for_site"></span>
     </li>
 
+    <li id="ytenabled" class = "menu-item hidden" role="button">
+      <div class="icon"></div>
+      <span id="ytenabled-yes" class="i18n_enabled_for_ytchannel"></span>
+      <span id="ytenabled-no" class="i18n_disabled_for_ytchannel"></span>
+    </li>
+
     <li id="clickhide" class="menu-item" role="button">
       <div class="icon"></div>
       <span class="i18n_easy_create_filter"></span>
